// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba el componente GifExpertApp Debe mostrar una lista de categorias 1`] = `
<div>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Programing"
      key="Programing"
    />
    <GifGrid
      category="Vegeta"
      key="Vegeta"
    />
  </ol>
</div>
`;

exports[`Prueba el componente GifExpertApp Debe mostrarse correctamente 1`] = `
<div>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</div>
`;
